--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
 .container-fluid {
   width: 90%;
 }
+
+.page-header, .bs-example {
+  width: 90%;
+}
+
+#div-before, #div-after {
+    background-color: #88d;
+    color: #000;
+}
