--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,21 @@
-.navbar {
+body {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: black;
+}
 
+.container {
+  background-color: white;
+}
+
+#davesNavbar{
+  background-color: black;
+}
+
+.nav, .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form, .navbar-brand {
+background-color: black;
 }
 
 .container {
